2006-04-27  Rodney Dawes  <dobey@novell.com>

	* em-folder-tree.c (render_pixbuf): Use gnome-fs-trash-empty rather
	than stock_delete for the Trash folder icon

	* em-folder-view.c (emfv_popup_items[]): Don't set an icon for Undelete
	(emfv_message_pixmaps[]): Don't set an icon for Undelete and set the
	icon for deleting a message to gnome-fs-trash-empty, not stock_delete

	Fixes #339626

2006-04-26  Srinivasa Ragavan  <sragavan@novell.com>

	** Patch from Victor for adding a Sender header to message list.

	* message-list.c: (ml_duplicate_value), (ml_free_value),
	(ml_initialize_value), (ml_value_is_empty), (ml_value_to_string),
	(ml_tree_value_at): Handled the new column header.
	* message-list.etspec: Added a new column header to spec.
	* message-list.h: Added a new column

2006-04-26  Srinivasa Ragavan  <sragavan@novell.com>

	* em-folder-view.c: (emfv_setup_view_instance): Comparing the
	FolderInfo flags right, to make Mailbox to show From header in message
	list for groupwise servers.

2006-04-26  Srinivasa Ragavan  <sragavan@novell.com>

	** Fixes bug #323402
	
	* em-folder-tree.c: (folder_tree_new): Code for Ellipsizing folder
	tree. (Patch from Vincent Noel)
	* em-migrate.c: Adding side_bar_search to 
	* evolution-mail.schemas.in.in: Adding a schema for enabling/disabling
	side bar search. (Patch from Rakesh)

2006-04-24  Srinivasa Ragavan  <sragavan@novell.com>

	* mail-session.c: (get_password): Ask passphrase if the user is
	supposed to enter the same.

2006-04-22  Srinivasa Ragavan  <sragavan@novell.com>

	* em-format-html-display.c: (efhd_attachment_button),
	(efhd_format_attachment): Added code to create image cache of image
	attachment in the ethread instead of main thread to avoid gui lockup.

2006-04-21  Sankar P  <psankar@novell.com>

	* mail-mt.c: (do_op_status):
	Fix the cryptic hexa-status-bar-message.
	The problem still lies somewhere. But dont show 
	something weird to the user.
	
2006-04-20  Jeffrey Stedfast  <fejj@novell.com>
